--- a/BAWebApp/war/BAWebApp.css
+++ b/BAWebApp/war/BAWebApp.css
@@ -16,7 +16,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #E6E6E6;
-	padding: 40px;
+	padding: 20px;
 }
 
 button {
@@ -81,5 +81,13 @@ button {
 	color: #000000;
 	font-weight: bold;
 }
+
+.startGameButton{
+	font-size:1.2em;
+	font-weight: bold;
+	color: #2E2EFE;
+	/*position: absolute; bottom: 20px;*/
+}
+
 
 
