--- a/BAWebApp/war/BAWebApp.css
+++ b/BAWebApp/war/BAWebApp.css
@@ -89,5 +89,14 @@ button {
 	/*position: absolute; bottom: 20px;*/
 }
 
+.textintro{
+	color: #000000;
+	padding: 10px;
+}
+
+.radioB{
+	color: #000000;
+}
+
 
 
